# aoc2022

day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day04/: Cargo.toml  input.txt
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/src/: main.rs
