[package]
name = "day05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
log = "0.4.20"
once_cell = "1.18.0"
regex = "1.9.3"
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", features=['std', 'env-filter']}
